<resources>
    <string name="app_name">Waiting</string>
    <string name="home">Home</string>
    <string name="cart">cart</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">Sign In</string>
    <string name="update">UPDATE</string>
    <string name="loading">LOADING.........</string>
    <string name="error">ERROR</string>
    <string name="explore">Explore</string>
    <string name="schedule">Schedule</string>
    <string name="reminder">Reminder</string>
    <string name="fab_button">fab button</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="settings">settings</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="do_you_raelly_want_to_elete_account">Do you really want to delete account ?</string>
    <string name="bag">bag</string>
    <string name="textview">TextView</string>
    <string name="description_for_bag_style_and_category">description for bag style and category</string>
    <string name="_219">219</string>
    <string name="go_to_category_women">GO to category women</string>
    <string name="add_to_favorites">ADD TO FAVORITES</string>
    <string name="delete">DELETE</string>
    <string name="add_to_favorite">Add TO FAVORITE</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="no_results">NO RESULTS</string>
    <string name="title">Title</string>
    <string name="login">LOGIN</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="new_credentials">NEW CREDENTIALS</string>
    <string name="to_home">TO HOME</string>
    <string name="send_reset_password_email">Send Reset Password email</string>
    <string name="Fragment_favorite">FavoriteFragment</string>
    <string name="cartfragment">CartFragment</string>
    <string name="fragment_home">Fragment Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_fragment">Search fragment</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including_versions_of_lorem_ipsum_lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including_versions_of_lorem_ipsum_lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including_versions_of_lorem_ipsum_lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including_versions_of_lorem_ipsum_it_is_a_long_established_fact_that_a_reader_will_be_distracted_by_the_readable_content_of_a_page_when_looking_at_its_layout_the_point_of_using_lorem_ipsum_is_that_it_has_a_more_or_less_normal_distribution_of_letters_as_opposed_to_using_content_here_content_here_making_it_look_like_readable_english_many_desktop_publishing_packages_and_web_page_editors_now_use_lorem_ipsum_as_their_default_model_text_and_a_search_for_lorem_ipsum_will_uncover_many_web_sites_still_in_their_infancy_various_versions_have_evolved_over_the_years_sometimes_by_accident_sometimes_on_purpose_injected_humour_and_the_like_it_is_a_long_established_fact_that_a_reader_will_be_distracted_by_the_readable_content_of_a_page_when_looking_at_its_layout_the_point_of_using_lorem_ipsum_is_that_it_has_a_more_or_less_normal_distribution_of_letters_as_opposed_to_using_content_here_content_here_making_it_look_like_readable_english_many_desktop_publishing_packages_and_web_page_editors_now_use_lorem_ipsum_as_their_default_model_text_and_a_search_for_lorem_ipsum_will_uncover_many_web_sites_still_in_their_infancy_various_versions_have_evolved_over_the_years_sometimes_by_accident_sometimes_on_purpose_injected_humour_and_the_like">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="image">image</string>
    <string name="name">Name</string>
    <string name="offers">Offers</string>
    <string name="_140_le">140 LE</string>
    <string name="name_of_medicine_14ml">name of medicine 14ml</string>
    <string name="buy_2_get_3">buy 2 get 3</string>
    <string name="medicines">Medicines</string>
    <string name="health">Health</string>
    <string name="beauty_care">beauty care</string>
    <string name="personal_care">personal care</string>
    <string name="accessories">Accessories</string>
    <string name="categories">Categories</string>
    <string name="add_favorite">ADD To Favorite</string>
    <string name="home_screen">Home Screen</string>
    <string name="service">Service</string>
    <string name="client">Client</string>
    <string name="log_out">Log out</string>
    <string name="category_clinic_store">category: clinic - store or....</string>
    <string name="name_of_service">name of service…</string>
    <string name="period_of_each_service">period of each service in minuets</string>
    <string name="save">SAVE</string>
    <string name="generate_qr_code">QR Code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="brows_gallery">Brows Gallery</string>
    <string name="enter_current_serving_number">Enter Current Serving number</string>
    <string name="end_visit">End Visit</string>
    <string name="end_this_day">End This Day</string>
    <string name="edit_your_order">Edit Your Order</string>
    <string name="edit_your_order_here">Edit Your Order here</string>
    <string name="add_my_number">Add My Number</string>
    <string name="done">DONE</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="edit">Edit</string>
    <string name="edit_my_number">Edit My Number</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="period_of_time_for_eatch_visitor">period of time for eatch visitor</string>
    <string name="you_will_wait_for_about">You will wait for about</string>
    <string name="are_you_sure">Are You Sure You Want To End Your Visit</string>
    <string name="dialog_logout_message">Are You Sure You Want To Log Out</string>
    <string name="dialog_delete_account_message">Are you sure you want to delete your account?</string>
    <string name="_0">0</string>
    <string name="edit_service">Edit Service</string>
</resources>