<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_edit_current_order"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_qr_code"
        android:title="@string/generate_qr_code"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/menu_edit_service"
        android:title="@string/edit_service"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/menu_log_out"
        android:title="@string/log_out"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/menu_delete_account"
        android:title="@string/delete_account"
        app:showAsAction="never">
    </item>
</menu>